--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- <script> -->
-<!-- window.location.replace("https://makeshiftsoftware.wixsite.com/main"); -->
+<script> window.location.replace("https://makeshiftsoftware.wixsite.com/main");
 
-<!-- </script> -->
-
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</script>
