--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script> window.location.replace("https://makeshiftsoftware.wixsite.com/main");
+<script> window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
 
 </script>
