--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<script> 
-
-var call_to = "http://smart-ip.net/geoip-json?callback=?";
-
-$.getJSON(call_to, function(data){
-   alert(data.host);
-});
-
-
-
-</script>
+test
